--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,22 +28,22 @@
     </header>
     <main>
         <section>
-            <div class="container2">
-                <div class="two">
+            <div class="hero">
+                <div class="heroheading">
                     <h1>White Water Rafting</h1>
                 </div>
-            </div>
                 <div class="wwrtext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></p>
+                    <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></a>
                 </div>
                 <p></p>
+            </div>
         </section>
         <section>
                 <div class="container3">
                         <h2>History</h2>
                 </div>
                     <div class="historytext">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg" alt="hero"></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="heroimg" src="wwrimages/hero.jpg" alt="hero"></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
                     </div>
                     <p>
