--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,7 +33,7 @@
                     <h1>White Water Rafting</h1>
                 </div>
                 <div class="wwrtext">
-                    <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></a>
+                    <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</a><a><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></a>
                 </div>
                 <p></p>
             </div>
