--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,12 +32,13 @@
                 <div class="heroheading">
                     <h1>White Water Rafting</h1>
                 </div>
-                <div class="wwrtext">
-                    <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</a><a><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></a>
-                </div>
-                <p></p>
+                <a class="wwrtext">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.<img class="family" src="wwrimages/happyfamily.jpg" alt="family"></p>
+                    
+                </a>
             </div>
         </section>
+        
         <section>
                 <div class="container3">
                         <h2>History</h2>
