--- a/week5/poll-form.html
+++ b/week5/poll-form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | HTML Form- User Poll</title>
+    <title>WDD 130 | HTML Form - User Poll</title>
 </head>
 <body>
     <header>
@@ -12,14 +12,14 @@
     <main>
         <form>
             <fieldset>
-                <legend>Contact Information<legend>
-                    <label for="fullname">Full Name:</label>
-                    <input type="text" id="fullname" name="fullname">
+                <legend>Contact Information</legend>
+                <label for="fullname">Full Name:</label>
+                <input type="text" id="fullname" name="fullname">
             </fieldset>
             <fieldset>
-                <legend>Questions<legend>
-                    <label for="fullname">Full Name:</label>
-                    <input type="email" id="useremail" name="useremail">
+                <legend>Questions</legend>
+                <label for="useremail">Email:</label>
+                <input type="email" id="useremail" name="useremail">
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
@@ -32,16 +32,18 @@
                     <option value="brave">Brave</option>
                     <option value="other">Other</option>
                 </select>
+                
                 <label for="pet">Do you have a household pet?</label>
                 <input type="checkbox" id="pet" name="pet">
+                
                 <label for="feedback">List the places you have lived:</label>
-                <textarea id="feedback" name="feedback" rows="4" placeholder="Stillwater"></textarea>
+                <textarea id="feedback" name="feedback" rows="4" placeholder="Harkers Island, Rexburg"></textarea>
             </fieldset>
             <button type="submit">Submit Poll</button>
         </form>
     </main>
     <footer>
-        <p>©2024 | HTML Form- User Poll Activity | Seth Taylor</p>
+        <p>©2024 | HTML Form - User Poll Activity | Seth Taylor</p>
     </footer>
 </body>
 </html>
