--- a/week5/poll-form.html
+++ b/week5/poll-form.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <link rel="stylesheet" href="styles/poll-form.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,18 +17,24 @@
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
+                <div class="form-item column2">
                 <label for="fullname">Full Name:</label>
                 <input type="text" id="fullname" name="fullname">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
+                <div class="form-item column2">
                 <label for="useremail">Email:</label>
                 <input type="email" id="useremail" name="useremail">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
+
                 <label for="browser">What is your favorite internet browser?</label>
                 <select id="browser" name="browser">
+
                     <option value="chrome">Chrome</option>
                     <option value="firefox">Firefox</option>
                     <option value="safari">Safari</option>
@@ -32,10 +42,10 @@
                     <option value="brave">Brave</option>
                     <option value="other">Other</option>
                 </select>
-                
+                <div class="form-item">
                 <label for="pet">Do you have a household pet?</label>
                 <input type="checkbox" id="pet" name="pet">
-                
+                </div>
                 <label for="feedback">List the places you have lived:</label>
                 <textarea id="feedback" name="feedback" rows="4" placeholder="Harkers Island, Rexburg"></textarea>
             </fieldset>
