--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,87 +19,89 @@
     <main class="mainBC">
         <section class="section1">
             <div class="contact1">
-                <a class="article">
+                <div class="article">
                     <h1 class="hfont">White Water Rafting</h1>
                     <p class="pfont">Give Us a Call! - (123)-456-7901</p>
-                </a>
-                <a class="article">
+                </div>
+                <div class="article">
                     <p class="hero">We love questions and feedback – and we're always happy to help!</p>
-                </a>
-                <a class="article">
+                </div>
+                <div class="article">
                     <h1 class="hfont">Send Us an Email!</h1>
                     <p class="pfont">whitewaterrafting@gmail.com</p>
-                </a>
+                </div>
             </div>
         </section>
         
         <section class="section1">
-                <div class="containerlocation">
-                    <a class="article">
-                        <h2 class="hfont">Where we're Located</h2>
-                        <p class="pfont">177 Huntington Ave Ste 1703</p>
-                        <p class="pfont">We are located right in the heart of Idaho Falls!</p>
-                        <p class="pfont">Follow the signs from the highway!</p>
-                    </a>
-                    <a class="article">
-                        <h2 class="hfont">
-                        <form>
-                            <fieldset>
-                                <legend>Contact Information</legend>
-                                <div class="form-item column2">
+            <div class="containerlocation">
+                <div class="article">
+                    <h2 class="hfont">Where we're Located</h2>
+                    <p class="pfont">177 Huntington Ave Ste 1703</p>
+                    <p class="pfont">We are located right in the heart of Idaho Falls!</p>
+                    <p class="pfont">Follow the signs from the highway!</p>
+                </div>
+
+                <div class="article">
+                    <h2 class="hfont">Contact Information</h2>
+                    <form>
+                        <fieldset>
+                            <legend>Contact Information</legend>
+                            <div class="form-item column2">
                                 <label for="fullname">Full Name:</label>
                                 <input type="text" id="fullname" name="fullname">
                                 <label for="useremail">Email:</label>
                                 <input type="email" id="useremail" name="useremail">
-                                </div>
-                            </fieldset>
-                            <fieldset>
-                                <legend>Questions</legend>
-                                <label for="browser">Suggestions</label>
-                                <select id="browser" name="browser">
-                
-                                    <option value="chrome">General Inquiry</option>
-                                    <option value="firefox">Reservation Question</option>
-                                    <option value="safari">Website Suggestion</option>
-                                </select>
-                                <textarea id="feedback" name="feedback" rows="4" placeholder="Your suggestion"></textarea>
-                                <div class="form-item">
-                                    <label for="pet">Please subscribe me to the monthly newsletter</label>
-                                    <input type="checkbox" id="pet" name="pet">
-                                    </div>
-                            </fieldset>
-                            <button type="submit">Submit Poll</button>
-                        </form>
-                    </h2>
-                    </a>
-                    <a class="article">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2966.4520181205694!2d-111.95733792388599!3d43.78954284360208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDPCsDQ3JzIyLjMiTiAxMTHCsDU3JzE3LjIiVw!5e1!3m2!1sen!2sus!4v1729282152517!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </a>
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Questions</legend>
+                            <label for="browser">Suggestions</label>
+                            <select id="browser" name="browser">
+                                <option value="chrome">General Inquiry</option>
+                                <option value="firefox">Reservation Question</option>
+                                <option value="safari">Website Suggestion</option>
+                            </select>
+                            <textarea id="feedback" name="feedback" rows="4" placeholder="Your suggestion"></textarea>
+                            <div class="form-item">
+                                <label for="pet">Please subscribe me to the monthly newsletter</label>
+                                <input type="checkbox" id="pet" name="pet">
+                            </div>
+                        </fieldset>
+                        <button type="submit">Submit Poll</button>
+                    </form>
                 </div>
+
+                <div class="article">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2966.4520181205694!2d-111.95733792388599!3d43.78954284360208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDPCsDQ3JzIyLjMiTiAxMTHCsDU3JzE3LjIiVw!5e1!3m2!1sen!2sus!4v1729282152517!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </section>
+
         <section>
-                    <div class="containerstaff">
-                        <h2>Meet Our Staff!</h2>
-                    </div>
-                    <div class="containerstaff"> 
-                            <figure>
-                               <img class="employee" src="wwrimages/johndoe.jpg" alt="John">
-                               <figcaption class="fig">John Doe</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="employee" src="wwrimages/janedoe.jpg" alt="Jane">
-                                <figcaption class="fig">Jane Doe</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="employee" src="wwrimages/janetdoe.jpg" alt="Janet">
-                                <figcaption class="fig">Janet Doe</figcaption>
-                            </figure>
-                </div>
+            <div class="containerstaff">
+                <h2>Meet Our Staff!</h2>
+            </div>
+            <div class="containerstaff"> 
+                <figure>
+                    <img class="employee" src="wwrimages/johndoe.jpg" alt="John">
+                    <figcaption class="fig">John Doe</figcaption>
+                </figure>
+                <figure>
+                    <img class="employee" src="wwrimages/janedoe.jpg" alt="Jane">
+                    <figcaption class="fig">Jane Doe</figcaption>
+                </figure>
+                <figure>
+                    <img class="employee" src="wwrimages/janetdoe.jpg" alt="Janet">
+                    <figcaption class="fig">Janet Doe</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
-        <footer class="contactfooter">
-            <p>© 2024 White Water Rafting | Seth Taylor</p>
-            <a href="https://app.moqups.com/r1KLHP9niajJWnfyhCrQTRJKFF5EnIa1/view/page/a65ef9a0b" title="Wireframe">Wireframe</a>
+
+    <footer class="contactfooter">
+        <p>© 2024 White Water Rafting | Seth Taylor</p>
+        <a href="https://app.moqups.com/r1KLHP9niajJWnfyhCrQTRJKFF5EnIa1/view/page/a65ef9a0b" title="Wireframe">Wireframe</a>
     </footer>
 </body>
 </html>
