--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -69,7 +69,7 @@
                         </fieldset>
                         <fieldset>
                             <fieldset>
-                                <legend>Select a maintenance drone:</legend>
+                                <legend>Select Suggestion:</legend>
                                 <div>
                                   <input type="radio" id="huey" name="drone" value="huey" checked />
                                   <label for="huey">General Inquiry</label>
@@ -94,7 +94,7 @@
                 </div>
 
                 <div">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2966.4520181205694!2d-111.95733792388599!3d43.78954284360208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDPCsDQ3JzIyLjMiTiAxMTHCsDU3JzE3LjIiVw!5e1!3m2!1sen!2sus!4v1729282152517!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2966.4520181205694!2d-111.95733792388599!3d43.78954284360208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDPCsDQ3JzIyLjMiTiAxMTHCsDU3JzE3LjIiVw!5e1!3m2!1sen!2sus!4v1729282152517!5m2!1sen!2sus" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -115,6 +115,18 @@
                 <figure>
                     <img class="employee" src="wwrimages/janetdoe.jpg" alt="Janet">
                     <figcaption class="fig">Janet Doe</figcaption>
+                </figure>
+                <figure>
+                    <img class="employee" src="wwrimages/joey.jpg" alt="Janet">
+                    <figcaption class="fig">Joey Doe</figcaption>
+                </figure>
+                <figure>
+                    <img class="employee" src="wwrimages/johnny.jpg" alt="Janet">
+                    <figcaption class="fig">Jared Doe</figcaption>
+                </figure>
+                <figure>
+                    <img class="employee" src="wwrimages/jared.jpg" alt="Janet">
+                    <figcaption class="fig">Johnny Doe</figcaption>
                 </figure>
             </div>
         </section>
