--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,15 +71,15 @@
                             <fieldset>
                                 <legend>Select Suggestion:</legend>
                                 <div>
-                                  <input type="radio" id="huey" name="drone" value="huey" checked />
+                                  <input type="radio" id="General Inquiry" name="General Inquiry" value="General Inquiry" checked >
                                   <label for="huey">General Inquiry</label>
                                 </div>
                                 <div>
-                                  <input type="radio" id="dewey" name="drone" value="dewey" />
+                                  <input type="radio" id="Reservation Question" name="Reservation Question" value="Reservation Question" >
                                   <label for="dewey">Reservation Question</label>
                                 </div>
                                 <div>
-                                  <input type="radio" id="louie" name="drone" value="louie" />
+                                  <input type="radio" id="Website Suggestion" name="Website Suggestion" value="Website Suggestion" >
                                   <label for="louie">Website Suggestion</label>
                                 </div>
                               </fieldset>
@@ -93,7 +93,7 @@
                     </form>
                 </div>
 
-                <div">
+                <div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2966.4520181205694!2d-111.95733792388599!3d43.78954284360208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDPCsDQ3JzIyLjMiTiAxMTHCsDU3JzE3LjIiVw!5e1!3m2!1sen!2sus!4v1729282152517!5m2!1sen!2sus" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
