--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,16 +71,16 @@
                             <fieldset>
                                 <legend>Select Suggestion:</legend>
                                 <div>
-                                  <input type="radio" id="General Inquiry" name="General Inquiry" value="General Inquiry" checked >
-                                  <label for="huey">General Inquiry</label>
+                                  <input type="radio" id="GeneralInquiry" name="GeneralInquiry" value="GeneralInquiry" checked >
+                                  <label for="General Inquiry">General Inquiry</label>
                                 </div>
                                 <div>
-                                  <input type="radio" id="Reservation Question" name="Reservation Question" value="Reservation Question" >
-                                  <label for="dewey">Reservation Question</label>
+                                  <input type="radio" id="ReservationQuestion" name="ReservationQuestion" value="ReservationQuestion" >
+                                  <label for="Reservation Question">Reservation Question</label>
                                 </div>
                                 <div>
-                                  <input type="radio" id="Website Suggestion" name="Website Suggestion" value="Website Suggestion" >
-                                  <label for="louie">Website Suggestion</label>
+                                  <input type="radio" id="WebsiteSuggestion" name="WebsiteSuggestion" value="WebsiteSuggestion" >
+                                  <label for="Website Suggestion">Website Suggestion</label>
                                 </div>
                               </fieldset>
                             <textarea id="feedback" name="feedback" rows="4" placeholder="Your suggestion"></textarea>
