--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,6 +16,7 @@
     <header>
         <div class="nav">
                 <nav class="nav">
+                    <p></p>
                     <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
                     <div class="grid-item"><a href="#">Index</a></div> 
                     <div class="grid-item"><a href="#">About Us</a></div> 
@@ -74,9 +75,8 @@
                 </div>
         </section>
     </main>
-        <footer class="footer">
-            <p>© 2024 White Water Rafting | Seth Taylor</p>
-            <div class="social-links">
+            <div class="contactfooter">
+                <p>© 2024 White Water Rafting | Seth Taylor</p>
                 <a href="https://facebook.com" aria-label="Facebook">
                     <img class="size" src="wwrimages/FB.png" alt="Facebook Logo">
                 </a>
