--- a/wwr/about.html
+++ b/wwr/about.html
@@ -75,6 +75,7 @@
                 </div>
         </section>
     </main>
+    <footer>
             <div class="contactfooter">
                 <p>© 2024 White Water Rafting | Seth Taylor</p>
                 <a href="https://facebook.com" aria-label="Facebook">
