--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,17 +8,51 @@
         <title>White Water Rafting Home Page</title>
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
-<body>
+<body class="backgroundlink">
 
     <header>
-        <nav class="link">
-            <a class="headertext" href="home"><img class="logo2" src="wwrimages/raftinglogo.png"></a>
-            <a class="headertext" href="#">Home</a>
-            <a class="headertext" href="wwr/">Rafting Website</a>
-            <a class="headertext" href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <nav class="headertext">
+            <a class="grid-itemHP" href="home"><img class="logo2" src="wwrimages/raftinglogo.png"></a>
+            <a class="grid-itemHP" href="#">Home</a>
+            <a class="grid-itemHP" href="wwr/">Trips</a>
+            <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/contact.html">Contact</a>
         </nav>
+        <h1 class="h1homemessage">White Water Rafting Home Page</h1>
     </header>
+    <img class="raftingfamily" src="wwrimages/rafting8.jpg">
+    <a class="clickhere">Book a Trip With Us Today!</a>
+    <a class="clickhere" href="trips">Click here!</a>
+    <div class="raftingpics">
+        <img class="raftingsize" src="wwrimages/rafting1.jpg" alt="rafting1">
+        <img class="raftingsize" src="wwrimages/rafting2.jpg" alt="rafting2">
+        <img class="raftingsize" src="wwrimages/rafting3.jpg" alt="rafting3">
+    </div>
+        <div class="bodyHP">
+            <img class="customerpics" src="wwrimages/female_customer.jpg" alt="femalecustomer">
+            <p class="customertest">Recent Guest!: "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ducimus ut vero, error dolor consequuntur minima quia aspernatur ullam eveniet asperiores veritatis repellat, doloribus voluptatibus totam ea odio sapiente facilis"</p>
+            <img class="customerpics" src="wwrimages/male_customer.jpg" alt="femalecustomer">
+            <p class="customertest">Recent Guest!: "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ducimus ut vero, error dolor consequuntur minima quia aspernatur ullam eveniet asperiores veritatis repellat, doloribus voluptatibus totam ea odio sapiente facilis"</p>
+            <form>
+                <fieldset>
+                    <legend>Sign Up for Our Newsletter!</legend>
+                    <div class="form-item column2">
+                        <label for="firstname">First Name:</label>
+                        <input type="text" id="firstname" name="firstname">
+                        <p></p>
+                        <label for="lastname">Last Name:</label>
+                        <input type="text" id="lastname" name="lastname">
+                        <p></p>
+                        <label for="useremail">Email:</label>
+                        <input type="email" id="useremail" name="useremail">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
 </body>
     <footer>
-
+        <h2 class="HPfooter">©2024 White Water Rafting | Seth Taylor 
+            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
+            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
+            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
+        </h2>
     </footer>
