--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,14 +12,14 @@
 
     <header>
         <nav class="headertext">
-            <a class="grid-itemHP" href="home"><img class="logo2" src="wwrimages/raftinglogo.png"></a>
+            <a class="grid-itemHP" href="home"><img class="logo2" src="wwrimages/raftinglogo.png" alt="raftinglogo"></a>
             <a class="grid-itemHP" href="#">Home</a>
             <a class="grid-itemHP" href="wwr/">Trips</a>
             <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/contact.html">Contact</a>
         </nav>
         <h1 class="h1homemessage">White Water Rafting Home Page</h1>
     </header>
-    <img class="raftingfamily" src="wwrimages/rafting8.jpg">
+    <img class="raftingfamily" src="wwrimages/rafting8.jpg" alt="rafting8">
     <a class="clickhere">Book a Trip With Us Today!</a>
     <a class="clickhere" href="trips">Click here!</a>
     <div class="raftingpics">
