--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,9 +12,9 @@
 
     <header>
         <nav class="headertext">
-            <a class="grid-itemHP" href="home"><img class="logo2" src="wwrimages/raftinglogo.png" alt="raftinglogo"></a>
-            <a class="grid-itemHP" href="#">Home</a>
-            <a class="grid-itemHP" href="wwr/">Trips</a>
+            <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/index.html"><img class="logo2" src="wwrimages/raftinglogo.png" alt="raftinglogo"></a>
+            <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/index.html">Home</a>
+            <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/trips.html">Trips</a>
             <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/contact.html">Contact</a>
         </nav>
         <h1 class="h1homemessage">White Water Rafting Home Page</h1>
