--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,6 +7,9 @@
         <meta name="author" content="Seth Taylor">
         <title>White Water Rafting Home Page</title>
         <link rel="stylesheet" href="styles/rafting.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     </head>
 <body class="backgroundlink">
 
