--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -22,7 +22,7 @@
             </nav>
             <h1 class="h1homemessage">White Water Rafting Trips Page</h1>
         </header>
-        <img class="raftingfamily"src="wwrimages/family_trip.jpg" alt="trip">
+        <img class="raftingfamily" src="wwrimages/family_trip.jpg" alt="trip">
         <h2 class="h1homemessage">White Water Rafting Company offers award winning trips around the North America!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum modi, asperiores saepe eos ab alias quos ducimus necessitatibus rem reprehenderit temporibus tempora quo qui molestias nihil commodi nesciunt delectus.</p>
     <div class="trips">
@@ -71,19 +71,22 @@
           <tr>
             <th scope="row">Mexico</th>
             <td>$1500</td>
-            <td>yes</td>
+            <td>Yes</td>
           </tr>
         </tbody>
-        <tfoot>
-          <tr>
-            <th scope="row" colspan="2">Average age</th>
-            <td>33</td>
-          </tr>
-        </tfoot>
       </table>
-    <h2>The White Water Rafting Expirence</h2>
+    <h2 class="tripsdescription">The White Water Rafting Expirence
+      <p></p>
+      Embark on an exhilarating white water rafting adventure with White Water Rafting Company that promises unforgettable thrills and team-building fun! Tackle the rushing rapids of scenic rivers, guided by expert instructors who prioritize safety and excitement every step of the way. Perfect for groups of all experience levels, our trips offer an opportunity to bond as you navigate the twists, turns, and splashes together. Surrounded by breathtaking landscapes, you’ll ride the waves, laugh with teammates, and create memories that will last a lifetime. Whether you're seeking a day of adrenaline or a scenic float with occasional thrills, our white water rafting experiences offer a unique way to enjoy nature and strengthen connections. Ready to paddle into adventure?
+    </h2>
+    
     </div>
     <footer>
-
+      <h2 class="HPfooter">©2024 White Water Rafting | Seth Taylor 
+        <a href="https://facebook.com">WireFrame</a>
+        <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
+        <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
+        <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
+    </h2>
 </footer>
 </body>
