--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -75,8 +75,7 @@
           </tr>
         </tbody>
       </table>
-    <h2 class="tripsdescription">The White Water Rafting Expirence
-      <p></p>
+    <h2 class="tripsdescription">The White Water Rafting Expirence---
       Embark on an exhilarating white water rafting adventure with White Water Rafting Company that promises unforgettable thrills and team-building fun! Tackle the rushing rapids of scenic rivers, guided by expert instructors who prioritize safety and excitement every step of the way. Perfect for groups of all experience levels, our trips offer an opportunity to bond as you navigate the twists, turns, and splashes together. Surrounded by breathtaking landscapes, you’ll ride the waves, laugh with teammates, and create memories that will last a lifetime. Whether you're seeking a day of adrenaline or a scenic float with occasional thrills, our white water rafting experiences offer a unique way to enjoy nature and strengthen connections. Ready to paddle into adventure?
     </h2>
     
