--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -12,7 +12,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     </head>
 <body>
-
         <header>
             <nav class="headertext">
                 <a class="grid-itemHP" href="https://sethbtaylor2020.github.io/wdd130/wwr/index.html"><img class="logo2" src="wwrimages/raftinglogo.png" alt="raftinglogo"></a>
@@ -82,7 +81,7 @@
     </div>
     <footer>
       <h2 class="HPfooter">©2024 White Water Rafting | Seth Taylor 
-        <a href="https://facebook.com">WireFrame</a>
+        <a href="wwrimages/wireframe.jpg">WireFrame</a>
         <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
         <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
         <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
